move: server/handler->handler/,  schema/->domain/
