# backend/handler/user.go
@@ -1,23 +1,16 @@
 package handler
 
 import (
-	"context"
-
-	"github.com/arumakan1727/todo-app-go-react/schema"
+	"github.com/arumakan1727/todo-app-go-react/domain"
 	"github.com/labstack/echo/v4"
 )
 
-type UserUsecase interface {
-	ListAll(c context.Context) (*schema.UserList, error)
-	Create(c context.Context, param *schema.ReqCreateUser) (*schema.User, error)
-}
-
-type UserHandler Handler[UserUsecase]
+type UserHandler Handler[domain.UserUsecase]
 
 func (h UserHandler) ListUsersForAdmin(c echo.Context) error {
 	ctx := c.Request().Context()
 
-	ul, err := h.usecase.ListAll(ctx)
+	ul, err := h.usecase.List(ctx)
 	if err != nil {
 		return err
 	}
@@ -27,12 +20,12 @@ func (h UserHandler) ListUsersForAdmin(c echo.Context) error {
 func (h UserHandler) CreateUser(c echo.Context) error {
 	ctx := c.Request().Context()
 
-	var b schema.ReqCreateUser
+	var b domain.ReqCreateUser
 	if err := parseBodyAsJSON(ctx, c.Request(), &b); err != nil {
 		return err
 	}
 
-	user, err := h.usecase.Create(ctx, &b)
+	user, err := h.usecase.Store(ctx, &b)
 	if err != nil {
 		return err
 	}
